Correction marge version mobile

--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -64,7 +64,7 @@
 /* RECHERCHE */
 .recherche 
 {
-    width: 96%;
+    width: 95%;
     padding: 0 15px;
 }
 .champs-recherche
@@ -149,4 +149,5 @@ form
 .colonne-footer
 {
     width: 100%;
+    padding-right: 0px;
 }
